unpackaged/main/default/objects/Opportunity/fields/Oppty_Won__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Won__c</fullName>
    <description>Field created for dashboard reporting</description>
    <formula>IF( ISPICKVAL( StageName , &quot;Closed Won&quot;) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oppty Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>