unpackaged/main/default/objects/Opportunity/fields/Owner_Regions__c.field-meta.xml
<CustomField>
    <fullName>Owner_Regions__c</fullName>
    <description>Region specified on Owner&#39;s User record</description>
    <formula>Owner.Regions__c</formula>
    <inlineHelpText>Region specified on Owner&#39;s User record</inlineHelpText>
    <label>Owner Regions</label>
    <type>Text</type>
</CustomField>