unpackaged/main/default/objects/Opportunity/fields/Owner_Salesperson_Number__c.field-meta.xml
<CustomField>
    <fullName>Owner_Salesperson_Number__c</fullName>
    <description>salesperson number from owner user record</description>
    <formula>Owner.Salesperson_Number__c</formula>
    <inlineHelpText>salesperson number from owner user record</inlineHelpText>
    <label>Owner Salesperson Number</label>
    <type>Text</type>
</CustomField>