unpackaged/main/default/objects/Opportunity/fields/Prefab__c.field-meta.xml
<CustomField>
    <fullName>Prefab__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in the Hanger Configurator integration.</description>
    <inlineHelpText>Used in the Hanger Configurator integration.</inlineHelpText>
    <label>Prefab</label>
    <type>Checkbox</type>
</CustomField>