unpackaged/main/default/objects/Opportunity/fields/Prefabrication_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Prefabrication_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prefabrication Opportunity</label>
    <type>Checkbox</type>
</CustomField>