unpackaged/main/default/objects/Opportunity/fields/Price_Book_Description__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Description__c</fullName>
    <formula>Pricebook2.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Book Description</label>
    <type>Text</type>
</CustomField>