unpackaged/main/default/objects/Opportunity/fields/Principal_Deal_Contact_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Principal_Deal_Contact_Advisor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The primary contact at the Intermediary firm</inlineHelpText>
    <label>Principal Deal Contact - Intermediary</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>M&amp;A Intermediary</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Principal Deal Contact - Advisor)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>