unpackaged/main/default/objects/Opportunity/fields/Principal_Deal_Contact_Target__c.field-meta.xml
<CustomField>
    <fullName>Principal_Deal_Contact_Target__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The primary contact from the Target Company</inlineHelpText>
    <label>Principal Deal Contact - Target</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>M&amp;A Target</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Principal Deal Contact - Target)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>