unpackaged/main/default/objects/Opportunity/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <description>Please choose the product category that best fits this opportunity</description>
    <inlineHelpText>Please choose the product category that best fits this opportunity</inlineHelpText>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cable Management</fullName>
            </value>
            <value>
                <fullName>Cable Solutions</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Fiberglass</fullName>
            </value>
            <value>
                <fullName>Flexicon</fullName>
            </value>
            <value>
                <fullName>Heritage</fullName>
            </value>
            <value>
                <fullName>Kaftech</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Metal Conduit &amp; Fittings</fullName>
            </value>
            <value>
                <fullName>PPC Conduit &amp; Fittings</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Unistrut</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>