unpackaged/main/default/objects/Opportunity/fields/Product_Category_Multi_Select__c.field-meta.xml
<CustomField>
    <fullName>Product_Category_Multi_Select__c</fullName>
    <label>Product Category (Multi Select)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ALUM</fullName>
            </value>
            <value>
                <fullName>Cable Management</fullName>
            </value>
            <value>
                <fullName>Cable Tray</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>ECN</fullName>
            </value>
            <value>
                <fullName>Fiberglass Conduit</fullName>
            </value>
            <value>
                <fullName>Fittings</fullName>
            </value>
            <value>
                <fullName>HDPE (PVC)</fullName>
            </value>
            <value>
                <fullName>Liquidtight &amp; Flexible Conduit</fullName>
            </value>
            <value>
                <fullName>MC</fullName>
            </value>
            <value>
                <fullName>Mechanical Supports</fullName>
            </value>
            <value>
                <fullName>Metal Framing</fullName>
            </value>
            <value>
                <fullName>Metal Framing Fittings</fullName>
            </value>
            <value>
                <fullName>MINI</fullName>
            </value>
            <value>
                <fullName>Modular</fullName>
            </value>
            <value>
                <fullName>Pre-Fab</fullName>
            </value>
            <value>
                <fullName>Product Group</fullName>
            </value>
            <value>
                <fullName>PVC Coated Conduit</fullName>
            </value>
            <value>
                <fullName>PVC Conduit</fullName>
            </value>
            <value>
                <fullName>PVC Fittings</fullName>
            </value>
            <value>
                <fullName>Stainless Steel Conduit</fullName>
            </value>
            <value>
                <fullName>Steel Conduit</fullName>
            </value>
            <value>
                <fullName>Steel Fittings</fullName>
            </value>
            <value>
                <fullName>SWCT</fullName>
            </value>
            <value>
                <fullName>UPVC</fullName>
            </value>
            <value>
                <fullName>Wire Basket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>