unpackaged/main/default/objects/Opportunity/fields/Product_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Category__c</fullName>
    <label>Product Sub-Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Product_Category__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A53 Pipe</fullName>
            </value>
            <value>
                <fullName>AFC</fullName>
            </value>
            <value>
                <fullName>Aluminum Conduit &amp; Fittings</fullName>
            </value>
            <value>
                <fullName>Barbed Tape</fullName>
            </value>
            <value>
                <fullName>BTC Products</fullName>
            </value>
            <value>
                <fullName>Cable Ladder</fullName>
            </value>
            <value>
                <fullName>Cables</fullName>
            </value>
            <value>
                <fullName>Cable Trays</fullName>
            </value>
            <value>
                <fullName>Cable Trunking</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>Clamps and Accessories</fullName>
            </value>
            <value>
                <fullName>Conduits</fullName>
            </value>
            <value>
                <fullName>Cope</fullName>
            </value>
            <value>
                <fullName>Fence  Framework</fullName>
            </value>
            <value>
                <fullName>Fittings</fullName>
            </value>
            <value>
                <fullName>Frame Fittings</fullName>
            </value>
            <value>
                <fullName>FRE BreathSaver (Phenolic)</fullName>
            </value>
            <value>
                <fullName>FRE Conduit</fullName>
            </value>
            <value>
                <fullName>FRE Elbows</fullName>
            </value>
            <value>
                <fullName>FRE Hangers</fullName>
            </value>
            <value>
                <fullName>FRE HazGaurd (XW)</fullName>
            </value>
            <value>
                <fullName>HSS Structural</fullName>
            </value>
            <value>
                <fullName>Large Mill</fullName>
            </value>
            <value>
                <fullName>Mechanical Tube</fullName>
            </value>
            <value>
                <fullName>Nato Barb</fullName>
            </value>
            <value>
                <fullName>Non Prime</fullName>
            </value>
            <value>
                <fullName>Non-Rated Bollards</fullName>
            </value>
            <value>
                <fullName>Operable Bollards</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Bollards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>