unpackaged/main/default/objects/Opportunity/fields/Project_Link_to_Dodge__c.field-meta.xml
<CustomField>
    <fullName>Project_Link_to_Dodge__c</fullName>
    <description>Project Link back to Dodge system If opportunity is related to a Project</description>
    <inlineHelpText>Project Link back to Dodge system If opportunity is related to a Project</inlineHelpText>
    <label>Project Link to Dodge</label>
    <type>Url</type>
</CustomField>