unpackaged/main/default/objects/Opportunity/fields/Project_Pursuit_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Project_Pursuit_Reminder__c</fullName>
    <formula>IF(Project_Pursuit__c = FALSE, &quot;*** HAVE YOU CONSIDERED THIS OPPORTUNITY FOR PROJECT PURSUIT? ***&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Pursuit Reminder</label>
    <type>Text</type>
</CustomField>