unpackaged/main/default/objects/Opportunity/fields/Project_Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Project_Square_Footage__c</fullName>
    <description>field is populated when opportunity is created from Project</description>
    <inlineHelpText>field is populated when opportunity is created from Project</inlineHelpText>
    <label>Project Square Footage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>