unpackaged/main/default/objects/Opportunity/fields/Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Start_Date__c</fullName>
    <inlineHelpText>The date that this project will start (not the close date of the opportunity). For example, if the products will not ship for many months after the opportunity is won, use this field</inlineHelpText>
    <label>Project Start Date</label>
    <type>Date</type>
</CustomField>