unpackaged/main/default/objects/Opportunity/fields/Reference_Prescriber__c.field-meta.xml
<CustomField>
    <fullName>Reference_Prescriber__c</fullName>
    <label>Reference Prescriber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>