unpackaged/main/default/objects/Opportunity/fields/Related_Project__c.field-meta.xml
<CustomField>
    <fullName>Related_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select the related project for this opportunity</description>
    <inlineHelpText>Select the related project for this opportunity</inlineHelpText>
    <label>Related Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>