unpackaged/main/default/objects/Opportunity/fields/Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Range__c</fullName>
    <description>Please select the revenue range for this opportunity</description>
    <inlineHelpText>Please select the revenue range for this opportunity</inlineHelpText>
    <label>Revenue Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;$50K</fullName>
            </value>
            <value>
                <fullName>$50K-$250K</fullName>
            </value>
            <value>
                <fullName>$250K-$500K</fullName>
            </value>
            <value>
                <fullName>$500K-$1M</fullName>
                <label>$500K+</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>