unpackaged/main/default/objects/Opportunity/fields/Revit_Contact__c.field-meta.xml
<CustomField>
    <fullName>Revit_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To be used for opportunities generated by the Revit integration. This is the contact who submitted the form.</description>
    <inlineHelpText>To be used for opportunities generated by the Revit integration. This is the contact who submitted the form.</inlineHelpText>
    <label>Revit Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Revit Contact)</relationshipLabel>
    <relationshipName>Revit_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>