unpackaged/main/default/objects/Opportunity/fields/Revit_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Revit_User_ID__c</fullName>
    <label>Revit User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>