unpackaged/main/default/objects/Opportunity/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <label>SBU</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Unit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cable/Flex/LiquidTite</fullName>
                <isActive>false</isActive>
                <label>Cable/Flex/LiquidTite</label>
            </value>
            <value>
                <fullName>Cable Management</fullName>
            </value>
            <value>
                <fullName>Construction and Prefab Services</fullName>
            </value>
            <value>
                <fullName>Corrosion Resistant Conduit</fullName>
            </value>
            <value>
                <fullName>Corrosion-Resistant Conduit &amp; Fittings</fullName>
                <isActive>false</isActive>
                <label>Corrosion-Resistant Conduit &amp; Fittings</label>
            </value>
            <value>
                <fullName>Electrical Cable and Flexible Conduit</fullName>
            </value>
            <value>
                <fullName>Fiberglass</fullName>
            </value>
            <value>
                <fullName>HDPE Pipe &amp; Conduit</fullName>
            </value>
            <value>
                <fullName>Metal Fittings</fullName>
                <isActive>false</isActive>
                <label>Metal Fittings</label>
            </value>
            <value>
                <fullName>Metal Framing</fullName>
            </value>
            <value>
                <fullName>Pre-Wired Modular Devices</fullName>
                <isActive>false</isActive>
                <label>Pre-Wired Modular Devices</label>
            </value>
            <value>
                <fullName>PVC Conduit</fullName>
                <isActive>false</isActive>
                <label>PVC Conduit</label>
            </value>
            <value>
                <fullName>PVC Fittings</fullName>
                <isActive>false</isActive>
                <label>PVC Fittings</label>
            </value>
            <value>
                <fullName>PVC Pipe &amp; Conduit</fullName>
            </value>
            <value>
                <fullName>Metal Conduit</fullName>
                <isActive>false</isActive>
                <label>Steel Conduit</label>
            </value>
            <value>
                <fullName>Steel Conduit &amp; ECN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>