unpackaged/main/default/objects/Opportunity/fields/SBU_s__c.field-meta.xml
<CustomField>
    <fullName>SBU_s__c</fullName>
    <formula>LEFT(TRIM( SBUL__c ) , LEN(TRIM(SBUL__c)) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SBU(s)</label>
    <type>Text</type>
</CustomField>