unpackaged/main/default/objects/Opportunity/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data  Centre</fullName>
            </value>
            <value>
                <fullName>Renewables</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Stock</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Buildings</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Commercial Market</fullName>
                <isActive>false</isActive>
                <label>Commercial Market</label>
            </value>
            <value>
                <fullName>Off-shore</fullName>
                <isActive>false</isActive>
                <label>Off-shore</label>
            </value>
            <value>
                <fullName>Power &amp; Energie</fullName>
                <isActive>false</isActive>
                <label>Power &amp; Energie</label>
            </value>
            <value>
                <fullName>Public Sector</fullName>
                <isActive>false</isActive>
                <label>Public Sector</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>