unpackaged/main/default/objects/Opportunity/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Access Flooring</fullName>
                <color>#0B6FCE</color>
                <label>Access Flooring</label>
            </value>
            <value>
                <fullName>Furniture</fullName>
                <color>#78C953</color>
                <label>Furniture</label>
            </value>
            <value>
                <fullName>Display Racks / Store Fixtures</fullName>
                <color>#E27001</color>
                <label>Display Racks / Store Fixtures</label>
            </value>
            <value>
                <fullName>Greenhouses</fullName>
                <color>#A845DC</color>
                <label>Greenhouses</label>
            </value>
            <value>
                <fullName>Carports</fullName>
                <color>#F3D904</color>
                <label>Carports</label>
            </value>
            <value>
                <fullName>Metal Buildings</fullName>
                <color>#A53711</color>
                <label>Metal Buildings</label>
            </value>
            <value>
                <fullName>Frames &amp; Awnings (Not Tents)</fullName>
                <color>#66E9BD</color>
                <label>Frames &amp; Awnings (Not Tents)</label>
            </value>
            <value>
                <fullName>Housewares</fullName>
                <color>#0B24BE</color>
                <label>Housewares</label>
            </value>
            <value>
                <fullName>Trash Toters / Disposal Equipment</fullName>
                <color>#419249</color>
                <label>Trash Toters / Disposal Equipment</label>
            </value>
            <value>
                <fullName>Scaffold</fullName>
                <color>#B6E32E</color>
                <label>Scaffold</label>
            </value>
            <value>
                <fullName>Satellite Dish</fullName>
                <color>#641CCF</color>
                <label>Satellite Dish</label>
            </value>
            <value>
                <fullName>Poultry Feeders &amp; Equipment</fullName>
                <color>#F96FB7</color>
                <label>Poultry Feeders &amp; Equipment</label>
            </value>
            <value>
                <fullName>Carts / Hand Trucks</fullName>
                <color>#2F5D85</color>
                <label>Carts / Hand Trucks</label>
            </value>
            <value>
                <fullName>Industrial Bulk Containers</fullName>
                <color>#AFCADF</color>
                <label>Industrial Bulk Containers</label>
            </value>
            <value>
                <fullName>Industrial Shelving / Pallet Racks</fullName>
                <color>#8F6429</color>
                <label>Industrial Shelving / Pallet Racks</label>
            </value>
            <value>
                <fullName>Conveyor Systems</fullName>
                <color>#EFAE73</color>
                <label>Conveyor Systems</label>
            </value>
            <value>
                <fullName>Farmstead Equipment</fullName>
                <color>#57F17C</color>
                <label>Farmstead Equipment</label>
            </value>
            <value>
                <fullName>Irrigation Equipment</fullName>
                <color>#0B6FCE</color>
                <label>Irrigation Equipment</label>
            </value>
            <value>
                <fullName>Lawn &amp; Garden</fullName>
                <color>#78C953</color>
                <label>Lawn &amp; Garden</label>
            </value>
            <value>
                <fullName>Auto OEM</fullName>
                <color>#E27001</color>
                <label>Auto OEM</label>
            </value>
            <value>
                <fullName>Auto Aftermarket</fullName>
                <color>#A845DC</color>
                <label>Auto Aftermarket</label>
            </value>
            <value>
                <fullName>RV &amp; Camper Parts</fullName>
                <color>#F3D904</color>
                <label>RV &amp; Camper Parts</label>
            </value>
            <value>
                <fullName>Tractor-Trailer Accessories</fullName>
                <color>#A53711</color>
                <label>Tractor-Trailer Accessories</label>
            </value>
            <value>
                <fullName>Juvenile Products (Including Toys)</fullName>
                <color>#66E9BD</color>
                <label>Juvenile Products (Including Toys)</label>
            </value>
            <value>
                <fullName>Playground Sets</fullName>
                <color>#0B24BE</color>
                <label>Playground Sets</label>
            </value>
            <value>
                <fullName>Unistrut Misc</fullName>
                <color>#419249</color>
                <label>Unistrut Misc</label>
            </value>
            <value>
                <fullName>Sign Post</fullName>
                <color>#B6E32E</color>
                <label>Sign Post</label>
            </value>
            <value>
                <fullName>Sporting Goods</fullName>
                <color>#641CCF</color>
                <label>Sporting Goods</label>
            </value>
            <value>
                <fullName>Canopies &amp; Shade Structures</fullName>
                <color>#F96FB7</color>
                <label>Canopies &amp; Shade Structures</label>
            </value>
            <value>
                <fullName>Service Centers</fullName>
                <color>#2F5D85</color>
                <label>Service Centers</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>