unpackaged/main/default/objects/Opportunity/fields/Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit__c</fullName>
    <label>Site Visit</label>
    <type>Date</type>
</CustomField>