unpackaged/main/default/objects/Opportunity/fields/Source_Firm__c.field-meta.xml
<CustomField>
    <fullName>Source_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intermediary</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Account.RecordType.Id</field>
            <operation>equals</operation>
            <value>0120B000000EDcS</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>