unpackaged/main/default/objects/Opportunity/fields/Strategy_del__c.field-meta.xml
<CustomField>
    <fullName>Strategy_del__c</fullName>
    <label>Strategy</label>
    <type>TextArea</type>
</CustomField>