unpackaged/main/default/objects/Opportunity/fields/Sub_Brand__c.field-meta.xml
<CustomField>
    <fullName>Sub_Brand__c</fullName>
    <description>Sub brand of Product Category</description>
    <inlineHelpText>Sub brand of Product Category</inlineHelpText>
    <label>Sub Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFC Cable Systems, Kaf-Tech</fullName>
            </value>
            <value>
                <fullName>Cope, US Tray</fullName>
            </value>
            <value>
                <fullName>Unistrut, Powerstrut</fullName>
            </value>
            <value>
                <fullName>Allied Tube and Conduit,  Heritage, Cor-Tek</fullName>
            </value>
            <value>
                <fullName>Allied Tube and Conduit,  Heritage</fullName>
            </value>
            <value>
                <fullName>Allied Tube &amp; Conduit</fullName>
            </value>
            <value>
                <fullName>Allied Tube &amp; Conduit, Calconduit</fullName>
            </value>
            <value>
                <fullName>FRE Composites</fullName>
            </value>
            <value>
                <fullName>Allied Tube &amp; Conduit, Calbond</fullName>
            </value>
            <value>
                <fullName>Allied Tube &amp; Conduit, Calbrite</fullName>
            </value>
            <value>
                <fullName>Eastern Wire &amp; Conduit, United Poly Systems,  Four Star Industries</fullName>
            </value>
            <value>
                <fullName>ACS/Uni-Fab, Cii</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>